fixed mis-align

--- a/style.css
+++ b/style.css
@@ -146,7 +146,6 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 .container .t1 {
   font-family: Bahnschrift Light;
@@ -317,9 +316,8 @@ h1 {
   }
 }
 .blog_container {
-  padding: 5% 4rem;
+  padding: 10% 4rem;
   background-color: #f8f9fa;
-  height: 500px;
   font-size: 1.5rem;
   display: flex;
   flex-direction: column;
